// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ReadReceiptGroup <ReadReceiptPerson /> should display a tooltip 1`] = `
<div
  class="_tooltip_6ode6_8"
  data-floating-ui-focusable=""
  id="_r_6_"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; transform: translate(5px, -6px);"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="_arrow_6ode6_33"
    height="10"
    style="position: absolute; pointer-events: none; top: 100%; left: -1px;"
    viewBox="0 0 10 10"
    width="10"
  >
    <path
      d="M0,0 H10 L5,6 Q5,6 5,6 Z"
      stroke="none"
    />
    <clippath
      id="_r_9_"
    >
      <rect
        height="10"
        width="10"
        x="0"
        y="0"
      />
    </clippath>
  </svg>
  <span
    id="_r_4_"
  >
    Alice
  </span>
  <span
    class="_caption_6ode6_28 cpd-theme-dark"
    id="_r_5_"
  >
    @alice:example.org
  </span>
</div>
`;

exports[`ReadReceiptGroup <ReadReceiptPerson /> should fall back to userId if roomMember unspecified 1`] = `
<div>
  <span
    tabindex="0"
  >
    <div
      class="mx_AccessibleButton mx_ReadReceiptGroup_person"
      role="menuitem"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        aria-live="off"
        class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
        data-color="3"
        data-testid="avatar-img"
        data-type="round"
        role="presentation"
        style="--cpd-avatar-size: 24px;"
      >
        a
      </span>
      <div
        class="mx_ReadReceiptGroup_name"
      >
        <p>
          @alice:example.org
        </p>
        <p
          class="mx_ReadReceiptGroup_secondary"
        >
          ==MOCK FORMATTED DATE==
        </p>
      </div>
    </div>
  </span>
</div>
`;

exports[`ReadReceiptGroup <ReadReceiptPerson /> should render 1`] = `
<div>
  <span
    tabindex="0"
  >
    <div
      class="mx_AccessibleButton mx_ReadReceiptGroup_person"
      role="menuitem"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        aria-label="Profile picture"
        aria-live="off"
        class="_avatar_1qbcf_8 mx_BaseAvatar"
        data-color="3"
        data-testid="avatar-img"
        data-type="round"
        style="--cpd-avatar-size: 24px;"
      >
        <img
          alt=""
          class="_image_1qbcf_41"
          data-type="round"
          height="24px"
          loading="lazy"
          referrerpolicy="no-referrer"
          src="http://this.is.a.url//placekitten.com/400/400"
          width="24px"
        />
      </span>
      <div
        class="mx_ReadReceiptGroup_name"
      >
        <p>
          @alice:example.org
        </p>
        <p
          class="mx_ReadReceiptGroup_secondary"
        >
          ==MOCK FORMATTED DATE==
        </p>
      </div>
    </div>
  </span>
</div>
`;
